# plonk_ckb

./: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  compose.yaml  prover_script.sh  script.sh  setup.sh  verifier_script.sh
.github/workflows/: ci.yaml  clippy.yaml  pull_request.yaml
benchmark/: Cargo.toml
benchmark/src/: lib.rs  main.rs  utils.rs
cli/: Cargo.toml
client/: Cargo.toml
client/src/: const_value.rs  main.rs  plonk_generator.rs
contract_templates/plonk_verifier/: Cargo.toml  Makefile
contract_templates/plonk_verifier/src/: challenge.rs  data_structures.rs  error.rs  main.rs  verify.rs
contracts/data_check/: Cargo.toml  README.md
contracts/data_check/src/: error.rs  main.rs
contracts/plonk_verifier/: Cargo.toml  Makefile  README.md
contracts/plonk_verifier/src/: common_preprocessed_input_const.rs  common_processed_input_const.rs  main.rs  srs_const.rs  verify.rs
document/: README.md  benchmarks.md  usage.md
documents/: benchmarks.md  usage.md
kzg/src/: commitment.rs  lib.rs  scheme.rs  srs.rs  srs_const.rs
local_script/: dependency.txt
local_script/src/: challenge.rs  common_preprocessed_input_const.rs  common_processed_input_const.rs  data_structures.rs  srs_const.rs
plonk/: Cargo.toml
plonk/examples/: example.rs
plonk/src/: challenge.rs  circuit.rs  common_preprocessed_input_const.rs  common_processed_input.rs  common_processed_input_const.rs  compiled_circuit.rs  constraint.rs  data_structures.rs  gate.rs  lib.rs  parser.rs  prover.rs  slice_polynomial.rs  verifier.rs
plonk/src/ahp/: mod.rs
plonk/src/common_preprocessed_input/: circuit.rs  cpi_circuit.rs  cpi_parser.rs  mod.rs  parser.rs
prover_client/: Cargo.toml
prover_client/src/: const_value.rs  main.rs  plonk_generator.rs
tests/: Cargo.toml
tests/src/: lib.rs  tests.rs  utils.rs
verifier_cli/: Cargo.toml
verifier_cli/src/: main.rs
verifier_client/: Cargo.toml
verifier_client/src/: initialize.rs  main.rs
