[workspace]
resolver = "2"

members = [
  # Please don't remove the following line, we use it to automatically
  # detect insertion point for newly generated crates.
  # @@INSERTION_POINT@@
  "contracts/plonk_verifier",
  "tests",
  "client",
  "plonk",
]

[profile.release]
overflow-checks = true
strip = true
codegen-units = 1
