[package]
name = "client"
version = "0.1.0"
edition = "2021"

[dependencies]
ckb-sdk = "3.2.0"
ckb-types = "0.116.1"
serde_json = "1.0.117"
secp256k1 = "0.24"
ckb-jsonrpc-types = "0.116.1"
ckb-hash = "0.116.1"
clap = { version = "4.5.4", features = ["derive"] }
hex-string = "0.1.0"


rand = "0.8.5"
blake2 = { version = "0.9", default-features = false }
ark-ff = { version = "0.2", default-features = false }
ark-serialize = { version = "0.2", default-features = false }
ark-std = { version = "0.2", default-features = false }
ark-bls12-381 = { version = "0.2", default-features = false, features = [ "curve" ] }
ark-poly = {version = "0.2", default-features = false }
ark-poly-commit = { version = "0.2", default-features = false }
plonk_ckb = {version = "0.1", path = "../plonk"}


