[package]
name = "prover_client"
version = "0.1.0"
edition = "2021"

[dependencies]
ckb-sdk = "3.2.0"
ckb-types = "0.116.1"
serde_json = "1.0.117"
secp256k1 = "0.24"
ckb-jsonrpc-types = "0.116.1"
ckb-hash = "0.116.1"
clap = { version = "4.5.4", features = ["derive"] }
hex-string = "0.1.0"

ark-ff = "0.4.2"
ark-poly = "0.4.2"
ark-ec = "0.4.2"
ark-bls12-381 = "0.4.0"
ark-serialize = "0.4.2"
ark-std = "0.4.0"
sha2 = "0.10"
plonk = {version = "0.1.0", path = "../plonk"}
rand = "0.8.5"


