[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[dependencies]
ckb-testtool = "0.12.0"
serde_json = "1.0"
#ckb-tool = "0.3.1"

rand = "0.8.5"
blake2 = { version = "0.9", default-features = false }
ark-ff = { version = "0.2", default-features = false }
ark-serialize = { version = "0.2", default-features = false }
ark-std = { version = "0.2", default-features = false }
ark-bls12-381 = { version = "0.2", default-features = false, features = [ "curve" ] }
ark-poly = {version = "0.2", default-features = false }
ark-poly-commit = { version = "0.2", default-features = false }
plonk_ckb = {version = "0.1", path = "../plonk"}
#bytes = "1.6.0"