[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-bls12-381 = { version = "0.4.0" }
ark-ec = { version = "0.4.2" }
ark-ff = { version = "0.4.2" }
ark-poly = { version = "0.4.2" }
ark-serialize = { version = "0.4.2" }
ark-std = { version = "0.4.0" }
ckb-testtool = { version = "0.12.0" }
rand = { version = "0.8.5" }
serde_json = { version = "1.0" }
sha2 = { version = "0.10" }

kzg = { version = "0.1.0", path = "../kzg" }
plonk = { version = "0.1.0", path = "../plonk" }
