[package]
name = "tests"
version = "0.1.0"
edition = "2021"

[dependencies]
ckb-testtool = "0.12.0"
serde_json = "1.0"
#ckb-tool = "0.3.1"

ark-ff = "0.4.2"
ark-poly = "0.4.2"
ark-ec = "0.4.2"
ark-bls12-381 = "0.4.0"
ark-serialize = "0.4.2"
ark-std = "0.4.0"
sha2 = "0.10"
plonk = { version = "0.1.0", path = "../plonk" }
kzg = {version = "0.1.0", path = "../kzg"}
rand = "0.8.5"
