[package]
name = "plonk_verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
ark-bls12-381 = { version = "0.4.0" }
ark-ec = { version = "0.4.2" }
ark-ff = { version = "0.4.2" }
ark-poly = { version = "0.4.2" }
ark-serialize = { version = "0.4.2" }
ark-std = { version = "0.4.0", default-features = false }
ckb-std = { version = "0.15.1" }
sha2 = { version = "0.11.0-pre.3", default-features = false }

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
overflow-checks = true
strip = true
Zlocation-detail = "none"
