[package]
name = "plonk_verifier"
version = "0.1.0"
edition = "2021"

[dependencies]
ckb-std = "0.15.1"
ark-ff = "0.4.2"
ark-poly = "0.4.2"
ark-ec = "0.4.2"
ark-bls12-381 = "0.4.0"
ark-serialize = "0.4.2"
ark-std = { version = "0.4.0", default-features = false }
sha2 = { version = "0.11.0-pre.3", default-features = false }
